apps/kobo/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kobo-redis
  namespace: kobo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kobo-redis
  template:
    metadata:
      labels:
        app: kobo-redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: kobo-redis
  namespace: kobo
spec:
  selector:
    app: kobo-redis
  ports:
    - port: 6379
