apps/kobo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kobo
  namespace: kobo
spec:
  rules:
    - host: kobo.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpi
                port:
                  number: 80
